SF: Ajout d'une config doctrine pour les tests

--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -14,3 +14,10 @@ web_profiler:
 
 swiftmailer:
     disable_delivery: true
+
+doctrine:
+    dbal:
+        host: localhost
+        dbname: ptut_sondages_testing
+        user: ptut_sondages_testing
+        password: ptut_sondages_testing
