--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -41,6 +41,10 @@ fos_user:
     from_email:
         address: "%mailer_user%"
         sender_name: "%mailer_user%"
+    registration:
+        confirmation:
+          enabled: true
+
 # Twig Configuration
 twig:
     debug:            "%kernel.debug%"
