--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -23,4 +23,4 @@ doctrine:
         connections:
             default:
                 driver: pdo_sqlite
-                path: "%kernel.cache_dir%/test.db"
+                memory: true
