--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -6,7 +6,8 @@ framework:
     session:
         storage_id: session.storage.mock_file
     profiler:
-        collect: false
+        collect: true
+        enabled: true
 
 web_profiler:
     toolbar: false
