je comit pour ne pas perdre mes modifs

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -43,7 +43,10 @@ fos_user:
         sender_name: "%mailer_user%"
     registration:
         confirmation:
-          enabled: true
+            enabled: true
+        form:
+            type: AppBundle\Form\RegistrationType
+
 
 # Twig Configuration
 twig:
