--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -9,6 +9,12 @@ services:
 
     app.repository.page:
         class: AppBundle\Repository\PageRepository
+
+    app.form.registration:
+        class: AppBundle\Form\RegistrationType
+        tags:
+            - { name: form.type, alias: app_user_registration }
+
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
