--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -9,6 +9,9 @@ services:
 
     app.repository.page:
         class: AppBundle\Repository\PageRepository
+    app.pollRepositoryService:
+        class: AppBundle\Services\PollRepositoryService
+        arguments: ["@doctrine.orm.entity_manager"]
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
