--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -46,8 +46,18 @@ fos_user:
             enabled: true
         form:
             type: AppBundle\Form\RegistrationType
-
-
+fos_rest:
+    view:
+        formats:
+            json: true
+            rss: false
+            xml: false
+        templating_formats:
+            html: true
+        force_redirects:
+            html: true
+        failed_validation: HTTP_BAD_REQUEST
+        default_engine: twig
 # Twig Configuration
 twig:
     debug:            "%kernel.debug%"
