--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -34,6 +34,8 @@ framework:
     assets: ~
     php_errors:
         log: true
+    serializer: { enable_annotations: true }
+
 fos_user:
     db_driver: orm # other valid values are 'mongodb' and 'couchdb'
     firewall_name: main
