--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -55,7 +55,7 @@ fos_rest:
             rss: false
             xml: false
         templating_formats:
-            html: true
+            json: true
         force_redirects:
             html: true
         failed_validation: HTTP_BAD_REQUEST
