--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -3,3 +3,7 @@ app:
     type:     annotation
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+rest :
+    type : rest
+    resource : "routing_rest.yml"
+    prefix : /api
