Added api token + fix annotations import

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -18,6 +18,9 @@ services:
     app.pollRepositoryService:
         class: AppBundle\Services\PollRepositoryService
         arguments: ["@doctrine.orm.entity_manager"]
+    app.apiAuthService:
+        class: AppBundle\Services\ApiAuthService
+        arguments: [%api_token%]
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
