--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -39,6 +39,7 @@ services:
         arguments: ["@app.apiAuthService"]
         tags:
             - { name: kernel.event_listener, event: kernel.controller, method: onKernelController }
+            - { name: kernel.event_listener, event: kernel.exception, method: onKernelException }
     app.helper:
         class: AppBundle\Helper
 
