--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -14,7 +14,9 @@ services:
         class: AppBundle\Form\RegistrationType
         tags:
             - { name: form.type, alias: app_user_registration }
-
+    app.variantValidator:
+                    class: AppBundle\Validator\Constraint\IsExistingVariantTypeValidator
+                    arguments: ["@doctrine.orm.entity_manager"]
 
     app.pollRepositoryService:
         class: AppBundle\Services\PollRepositoryService
@@ -22,6 +24,7 @@ services:
     app.variantRepositoryService:
             class: AppBundle\Services\VariantRepositoryService
             arguments: ["@doctrine.orm.entity_manager"]
+
     app.apiAuthService:
         class: AppBundle\Services\ApiAuthService
         arguments: ["@request_stack", "%api_token%"]
