--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,9 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "twig/twig": "^1.0||^2.0",
         "friendsofsymfony/user-bundle": "~2.0@dev",
-        "friendsofsymfony/rest-bundle": "^2.1"
+        "friendsofsymfony/rest-bundle": "^2.1",
+        "jms/serializer-bundle": "^1.3",
+        "knplabs/doctrine-behaviors": "~1.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
