--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -93,6 +93,13 @@ doctrine:
         auto_generate_proxy_classes: "%kernel.debug%"
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
+        filters:
+            softdeleteable:
+                class: AppBundle\Filters\SoftDeleteableFilter
+                enabled: true
+
+
+
 
 # Swiftmailer Configuration
 swiftmailer:
