--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,9 @@
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "friendsofsymfony/rest-bundle": "^2.1",
         "jms/serializer-bundle": "^1.3",
-        "knplabs/doctrine-behaviors": "~1.1"
+        "knplabs/doctrine-behaviors": "~1.1",
+        "knplabs/knp-paginator-bundle": "^2.5",
+        "fzaninotto/faker": "^1.6"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
