--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -115,3 +115,7 @@ knp_doctrine_behaviors:
     sluggable:      true
     soft_deletable: true
     timestampable: true
+
+knp_paginator:
+  template:
+    pagination: KnpPaginatorBundle:Pagination:twitter_bootstrap_v4_pagination.html.twig
