--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -26,9 +26,11 @@ security:
             anonymous:    true
 
     access_control:
+        - { path: ^/backoffice/users/, role: ROLE_ADMIN }
+        - { path: ^/backoffice/users$, role: ROLE_ADMIN }
+        - { path: ^/backoffice/user/, role: ROLE_USER }
+        - { path: ^/backoffice/, role: ROLE_USER }
+        - { path: ^/backoffice, role: ROLE_USER }
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/backoffice, role: ROLE_USER }
-        - { path: ^/backoffice/, role: ROLE_USER }
-        - { path: ^/backoffice/user/, role: ROLE_USER }
