add parameters for google recapatcha and html5 pattern for user email

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -70,6 +70,8 @@ twig:
     strict_variables: "%kernel.debug%"
     form_themes:
         - 'bootstrap_3_layout.html.twig'
+    globals:
+        recaptcha_client_secret: '%recaptcha_client_secret%'
 
 
 # Doctrine Configuration
