--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -18,3 +18,6 @@ parameters:
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
     api_token: test
+    recapatcha_api : https://www.google.com/recaptcha/api/siteverify?
+    recaptcha_client_secret: 6Ld7_BsUAAAAAHsycsjsURaAytaEYx25rPwXalCV
+    recaptcha_server_secret: 6Ld7_BsUAAAAAKWkM37zt4aA8x0441WPkQ9vFqRh
