--- a/web/admin-interface/package.json
+++ b/web/admin-interface/package.json
@@ -9,8 +9,10 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "vue": "^2.2.1",
-    "vue-i18n": "^5.0.3"
+    "vue-i18n": "^5.0.3",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
