--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -64,7 +64,6 @@ services:
     app.poll.answers:
         class: AppBundle\Services\PollAnswersService
         arguments: ["@app.propositionRepositoryService", "@app.answerRepositoryService"]
-
-#    service_name:
-#        class: AppBundle\Directory\ClassName
-#        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+    app.poll.answer.form:
+        class: AppBundle\Form\PollViewType
+        arguments: ["@app.variantRepositoryService"]
