Add tag to fix form creation

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -67,3 +67,5 @@ services:
     app.poll.answer.form:
         class: AppBundle\Form\PollViewType
         arguments: ["@app.variantRepositoryService"]
+        tags:
+            - { name: form.type }
