--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -46,7 +46,7 @@ services:
                   arguments: [ "@app.pollRepositoryService", "@app.pageRepositoryService", "@app.questionRepositoryService", "@app.propositionRepositoryService" ]
     app.validationService:
                       class: AppBundle\Services\ValidationService
-                      arguments: [ "@validator", "@app.variantRepositoryService", "@app.pollCreationService"]
+                      arguments: [ "@doctrine.orm.entity_manager", "@validator", "@app.variantRepositoryService", "@app.pollCreationService"]
     app.twig_extension:
         class: AppBundle\Twig\AppExtension
         public: false
