--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -3,7 +3,8 @@ app:
     type:     annotation
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+    prefix: /backoffice
 rest:
-    type : rest
-    resource : "routing_rest.yml"
-    prefix : /api
+    type: rest
+    resource: "routing_rest.yml"
+    prefix: /api
