--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,12 @@
     "autoload-dev": {
         "psr-4": { "Tests\\": "tests/" }
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/RealAestan/ChartJSBundle.git"
+        }
+    ],
     "require": {
         "php": ">=5.5.9",
         "symfony/symfony": "3.2.*",
@@ -28,7 +34,9 @@
         "jms/serializer-bundle": "^1.3",
         "knplabs/doctrine-behaviors": "~1.1",
         "knplabs/knp-paginator-bundle": "^2.5",
-        "fzaninotto/faker": "^1.6"
+        "fzaninotto/faker": "^1.6",
+        "saad-tazi/g-chart-bundle": "^2.0",
+        "avegao/chartjs-bundle": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
