--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^3.0",
         "phpunit/phpunit": "^4.8",
-        "liip/functional-test-bundle": "^1.6"
+        "liip/functional-test-bundle": "^1.6",
+        "doctrine/doctrine-fixtures-bundle": "^2.3"
     },
     "scripts": {
         "symfony-scripts": [
