--- a/web/admin-interface/package.json
+++ b/web/admin-interface/package.json
@@ -6,9 +6,10 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "webpack --progress --hide-modules"
   },
   "dependencies": {
+    "axios": "^0.16.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "vue": "^2.2.1",
     "vue-i18n": "^5.0.3",
