--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -69,7 +69,7 @@ twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
     form_themes:
-        - 'bootstrap_3_layout.html.twig'
+        - 'custom_bootstrap_3_layout.html.twig'
     globals:
         recaptcha_client_secret: '%recaptcha_client_secret%'
 
