--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -12,6 +12,10 @@ services:
         class: AppBundle\Form\RegistrationType
         tags:
             - { name: form.type, alias: app_user_registration }
+    app.form.:
+            class: AppBundle\Form\RegistrationType
+            tags:
+                - { name: form.type, alias: app_user_registration }
     app.variantValidator:
         class: AppBundle\Validator\Constraints\IsExistingVariantValidator
         arguments: ["@app.variantRepositoryService"]
