--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
         "symfony/phpunit-bridge": "^3.0",
         "phpunit/phpunit": "^4.8",
         "liip/functional-test-bundle": "^1.6",
-        "doctrine/doctrine-fixtures-bundle": "^2.3"
+        "doctrine/doctrine-fixtures-bundle": "^2.3",
+        "squizlabs/php_codesniffer": "^3.0"
     },
     "scripts": {
         "symfony-scripts": [
