--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,12 @@
         {
             "type": "vcs",
             "url": "https://github.com/RealAestan/ChartJSBundle.git"
-        }
-    ],
+        },
+          {
+            "type": "vcs",
+            "url": "https://github.com/Endouble/Symfony3-custom-coding-standard"
+          }
+        ],
     "require": {
         "php": ">=5.5.9",
         "symfony/symfony": "3.2.*",
@@ -44,7 +48,7 @@
         "phpunit/phpunit": "^4.8",
         "liip/functional-test-bundle": "^1.6",
         "doctrine/doctrine-fixtures-bundle": "^2.3",
-        "squizlabs/php_codesniffer": "^3.0"
+        "endouble/symfony3-custom-coding-standard": "^2.10"
     },
     "scripts": {
         "symfony-scripts": [
