Un utilisateur peut supprimer son compte

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -33,4 +33,5 @@ security:
         - { path: ^/backoffice/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/backoffice/, role: ROLE_USER }
         - { path: ^/backoffice, role: ROLE_USER }
+        - { path: ^/profile, role: ROLE_USER }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
