--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -106,10 +106,14 @@ doctrine:
 
 # Swiftmailer Configuration
 swiftmailer:
-    transport: "%mailer_transport%"
-    host:      "%mailer_host%"
-    username:  "%mailer_user%"
-    password:  "%mailer_password%"
+    transport:  "%mailer_transport%"
+    host:       "%mailer_host%"
+    username:   "%mailer_user%"
+    password:   "%mailer_password%"
+    port:       "%mailer_port%"
+    encryption: "%mailer_encryption%"
+    auth_mode:  "%mailer_authmode%"
+
     spool:     { type: memory }
 
 knp_doctrine_behaviors:
