--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -14,6 +14,9 @@ parameters:
     mailer_host:       127.0.0.1
     mailer_user:       test@test.com
     mailer_password:   ~
+    mailer_port:       587
+    mailer_encryption: tls
+    mailer_authmode:   login
 
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
