--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -18,7 +18,7 @@ security:
                 login_path: /login
                 check_path: /login_check
                 always_use_default_target_path: true
-                default_target_path:            /backoffice
+                default_target_path:            /backoffice/polls
                 # if you are using Symfony < 2.8, use the following config instead:
                 # csrf_provider: form.csrf_provider
             logout:
