--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -43,13 +43,21 @@ services:
         arguments: ["@doctrine.orm.entity_manager","@validator","@app.repository_service.chart_type", "@app.repository_service.variant","@app.creation_service.poll"]
 
     app.validator.variant:
-           class: AppBundle\Validator\Constraints\IsExistingVariantValidator
-           arguments: ["@app.repository_service.variant"]
+        class: AppBundle\Validator\Constraints\IsExistingVariantValidator
+        arguments: ["@doctrine.orm.entity_manager"]
+        tags:
+           - {name: validator.constraint_validator}
+
+    app.validator.proposition:
+        class: AppBundle\Validator\Constraints\DuplicatePropositionValidator
+        arguments: ["@doctrine.orm.entity_manager"]
+        tags:
+            - {name: validator.constraint_validator}
 
     # API
     app.api.auth_service:
-          class: AppBundle\Services\ApiAuthService
-          arguments: ["@request_stack", "%api_token%"]
+        class: AppBundle\Services\ApiAuthService
+        arguments: ["@request_stack", "%api_token%"]
 
     # Twig
     app.twig_extension:
