composer.json: update + ajout des extensions PHP dans la partie « require »

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,13 @@
           }
         ],
     "require": {
-        "php": ">=5.5.9",
+        "php": "^7",
+        "ext-curl": "*",
+        "ext-dom": "*",
+        "ext-intl": "*",
+        "ext-mbstring": "*",
+        "ext-PDO": "*",
+        "ext-xml": "*",
         "symfony/symfony": "3.2.*",
         "doctrine/orm": "^2.5",
         "doctrine/doctrine-bundle": "^1.6",
@@ -67,11 +73,6 @@
         "post-update-cmd": [
             "@symfony-scripts"
         ]
-    },
-    "config": {
-        "platform": {
-            "php": "5.5.9"
-        }
     },
     "extra": {
         "symfony-app-dir": "app",
