--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -5,6 +5,10 @@ parameters:
 
 services:
     # Repositories service
+    app.user_manager:
+      class: AppBundle\Services\UserManager
+      arguments: ["@doctrine.orm.entity_manager"]
+
     app.repository_service.poll:
         class: AppBundle\Services\PollRepositoryService
         arguments: ["@doctrine.orm.entity_manager","@jms_serializer"]
